--- a/xv6/Makefile
+++ b/xv6/Makefile
@@ -177,7 +177,7 @@ UPROGS=\
 	_wc\
 	_zombie\
 	_testeCowfork\
-	_testnull\
+	_testNullPoint\
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -246,7 +246,7 @@ qemu-nox-gdb: fs.img xv6.img .gdbinit
 
 # Adicionado o testeCowfork.c
 EXTRA=\
-	mkfs.c ulib.c user.h cat.c echo.c forktest.c testeCowfork.c testnull.c grep.c kill.c\
+	mkfs.c ulib.c user.h cat.c echo.c forktest.c testeCowfork.c testNullPoint.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c\
 	printf.c umalloc.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
